<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

        
    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:focusable="true" 
        android:focusableInTouchMode="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/incorrectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/incorrect_login"
            android:textColor="@color/red"
            android:visibility="gone" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/adminLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        
        <TextView
                android:id="@+id/statusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/status"/>
        
        <RadioGroup
        android:id="@+id/radioGroupStatus"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
		    <RadioButton android:id="@+id/radioAvailable"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/available"
		        android:onClick="onRadioButtonClicked"/>
		    
		    <RadioButton android:id="@+id/radioCarpooling"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/carpooling"
		        android:onClick="onRadioButtonClicked"/>
		    
		     <RadioButton android:id="@+id/radioFull"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/full"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
    </LinearLayout>
    
	<TextView
        android:id="@+id/connectionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/disconnected"
        android:textSize="16sp"
        android:visibility="gone" />



</RelativeLayout>